Added VEX Robot

--- a/projects.html
+++ b/projects.html
@@ -70,11 +70,11 @@
 	</div>
 	<div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/mbta/mbta_screenshot_1.png" alt="MBTA Map">
+  			<img class="card-img-top" src="images/longboard/image3.jpeg" alt="Electric Longboard">
   			<div class="card-body">
-    			<h5 class="card-title">MBTA Map with Trainschedule</h5>
-    			<p class="card-text">This was a project for Tufts Comp-20 in which the Google Maps API was used to map the MBTA redline and provide a live train schedule.</p>
-    			<a href="project_pages/mbta_map.html" class="btn btn-primary">See More</a>
+    			<h5 class="card-title">Electric Longboard</h5>
+    			<p class="card-text">Made with Tufts MAKE club, this is a fully functional and ridable electric longboard.</p>
+    			<a href="project_pages/longboard.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
@@ -83,6 +83,14 @@
     			<h5 class="card-title">Quadcopter UAV</h5>
     			<p class="card-text">Made with Tufts MAKE club, I lead a project team designing and programming a quadcopter UAV.</p>
     			<a href="project_pages/quadcopter.html" class="btn btn-primary">See More</a>
+  			</div>
+		</div>
+		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+  			<img class="card-img-top" src="images/vex_robot/image1.jpeg" alt="Electric Longboard">
+  			<div class="card-body">
+    			<h5 class="card-title">VEX Robot</h5>
+    			<p class="card-text">This robot was made in High School to compete a VEX Robotics competition.</p>
+    			<a href="project_pages/vex_robot.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
 	</div>
@@ -96,13 +104,14 @@
   			</div>
 		</div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/longboard/image3.jpeg" alt="Electric Longboard">
+  			<img class="card-img-top" src="images/mbta/mbta_screenshot_1.png" alt="MBTA Map">
   			<div class="card-body">
-    			<h5 class="card-title">Electric Longboard</h5>
-    			<p class="card-text">Made with Tufts MAKE club, this is a fully functional and ridable electric longboard.</p>
-    			<a href="project_pages/longboard.html" class="btn btn-primary">See More</a>
+    			<h5 class="card-title">MBTA Map with Trainschedule</h5>
+    			<p class="card-text">This was a project for Tufts Comp-20 in which the Google Maps API was used to map the MBTA redline and provide a live train schedule.</p>
+    			<a href="project_pages/mbta_map.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
+
 		<!-- <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
   			<div class="card-body">
