Updated Project Description

--- a/project_pages/vex_robot.html
+++ b/project_pages/vex_robot.html
@@ -52,7 +52,7 @@
     		</div>
   		</div>
   		<div class="row">
-  			<p class="project-information">This was a robot I made in High School with my school's VEX Robotics club to compete in the VEX Starstruck competition. The body was built by me, and I programmed it in RobotC.</p>
+  			<p class="project-information">This was a robot I made in High School with my schools Robotics club to compete in the VEX Starstruck competition. The body was built by me, and I programmed it in RobotC.</p>
   		</div>
   	</div>
 </div>
