--- a/projects.html
+++ b/projects.html
@@ -111,6 +111,14 @@
     			<a href="project_pages/mbta_map.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
+		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+  			<img class="card-img-top" src="images/gerp/gerp_code.png" alt="Gerp Code">
+  			<div class="card-body">
+    			<h5 class="card-title">"Gerp"</h5>
+    			<p class="card-text">This was a project for Tufts Comp-15 in which the Unix/Linux "grep" command was replicated.</p>
+    			<a href="project_pages/gerp.html" class="btn btn-primary">See More</a>
+  			</div>
+		</div>
 
 		<!-- <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
