Updated project description

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/mbta/mbta_screenshot_1.png" alt="MBTA Map">
   			<div class="card-body">
-    			<h5 class="card-title">MBTA Map with Trainschedule</h5>
+    			<h5 class="card-title">MBTA Map and Train schedule</h5>
     			<p class="card-text">This was a project for Tufts Comp-20 in which the Google Maps API was used to map the MBTA redline and provide a live train schedule.</p>
     			<a href="project_pages/mbta_map.html" class="btn btn-primary">See More</a>
   			</div>
