Added research and updated navbar

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					<a class="nav-item nav-link active pill-space" href="index.html">Home</a>
 					<a class="nav-item nav-link active pill-space" href="index.html#contact-me">Contact</a>
 					<a class="nav-item nav-link active pill-space" href="JCK Resume.pdf" target="_blank">Resume</a>
+					<a class="nav-item nav-link active pill-space" href="research.html">Research</a>
 					<a class="nav-item nav-link active pill-space" href="projects.html">Projects</a>
 				</nav>
 			</div>
