--- a/projects.html
+++ b/projects.html
@@ -17,23 +17,24 @@
 
 <body>
 
-	<!-- Top Navbar -->
-	<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-		<a class="navbar-brand" href="index.html"><img src="images/corner_icon.svg" width="50" height="50"></a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-			<div class="navbar-nav ml-auto">
-				<nav class="nav nav-pills nav-fill">
-					<a class="nav-item nav-link active pill-space" href="index.html">Home</a>
-					<a class="nav-item nav-link active pill-space" href="index.html#contact-me">Contact</a>
-					<a class="nav-item nav-link active pill-space" href="JCK Resume.pdf" target="_blank">Resume</a>
-					<a class="nav-item nav-link active pill-space" href="projects.html">Projects</a>
-				</nav>
-			</div>
-		</div>
-	</nav>
+  <!-- Top Navbar -->
+  <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+    <a class="navbar-brand" href="index.html"><img src="images/corner_icon.svg" width="50" height="50"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav ml-auto">
+        <nav class="nav nav-pills nav-fill">
+          <a class="nav-item nav-link active pill-space" href="index.html">Home</a>
+          <a class="nav-item nav-link active pill-space" href="index.html#contact-me">Contact</a>
+          <a class="nav-item nav-link active pill-space" href="JCK Resume.pdf" target="_blank">Resume</a>
+          <a class="nav-item nav-link active pill-space" href="research.html">Research</a>
+          <a class="nav-item nav-link active pill-space" href="projects.html">Projects</a>
+        </nav>
+      </div>
+    </div>
+  </nav>
 
 
 
@@ -42,6 +43,10 @@
 <div class="sides">
 <div class="container-fluid w-75 bg-3 text-center projects-background">
 	<p class="section-header">// projects //</p>
+  <div class="alert alert-primary" role="alert">
+    This page does not include research. Click here for more information!
+    <a href="research.html" class="btn btn-primary">See More</a>
+  </div>
 	<div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/trinity/IMG_4857.JPG" alt="Trinity Robot">
@@ -137,6 +142,10 @@
   			</div>
 		</div> -->
 	</div>
+  <div class="alert alert-primary" role="alert">
+    To see more projects, and any source code for projects, please visit my Github!
+    <a href="https://github.com/0xJeremy" class="btn btn-primary"><i class="fa fa-github icon-padding" style="font-size: 30px;"></i></a>
+  </div>
 </div>
 </div>
 
