Added LEGO Robots

--- a/projects.html
+++ b/projects.html
@@ -124,24 +124,27 @@
     			<a href="project_pages/gerp.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-
-		<!-- <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
-  			<div class="card-body">
-    			<h5 class="card-title">Project Title</h5>
-    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
-    			<a href="project_template.html" class="btn btn-primary">See More</a>
-  			</div>
-		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/placeholder.svg" alt="Card image cap">
-  			<div class="card-body">
-    			<h5 class="card-title">Project Title</h5>
-    			<p class="card-text">This is where the project description is going to be. Probably pretty short, i.e. 2-3 sentences.</p>
-    			<a href="project_template.html" class="btn btn-primary">See More</a>
-  			</div>
-		</div> -->
 	</div>
+  <div class="row">
+    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/lego/iot_arms_3.jpg" alt="LEGO Robots">
+        <div class="card-body">
+          <h5 class="card-title">LEGO Robots</h5>
+          <p class="card-text">These robots were created as part of a Tufts course, and made out of LEGO. There are 4 robots shown here.</p>
+          <a href="project_pages/lego.html" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+<!--     <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/lego/iot_arms_3.jpg" alt="LEGO Robots">
+        <div class="card-body">
+          <h5 class="card-title">LEGO Robots</h5>
+          <p class="card-text">These robots were created as part of a Tufts course, and made out of LEGO. There are 4 robots shown here.</p>
+          <a href="project_pages/lego.html" class="btn btn-primary">See More</a>
+        </div>
+    </div> -->
+  </div>
+
+
   <div class="alert alert-primary" role="alert">
     To see more projects, and any source code for projects, please visit my Github!
     <a href="https://github.com/0xJeremy" class="btn btn-primary"><i class="fa fa-github icon-padding" style="font-size: 30px;"></i></a>
