--- a/projects.html
+++ b/projects.html
@@ -127,7 +127,7 @@
 	</div>
   <div class="row">
     <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-        <img class="card-img-top" src="images/lego/iot_arms_3.jpg" alt="LEGO Robots">
+        <img class="card-img-top" src="images/lego/iot_arms_3.JPG" alt="LEGO Robots">
         <div class="card-body">
           <h5 class="card-title">LEGO Robots</h5>
           <p class="card-text">These robots were created as part of a Tufts course, and made out of LEGO. There are 4 robots shown here.</p>
