--- a/projects.html
+++ b/projects.html
@@ -134,14 +134,14 @@
           <a href="project_pages/lego.html" class="btn btn-primary">See More</a>
         </div>
     </div>
-<!--     <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-        <img class="card-img-top" src="images/lego/iot_arms_3.jpg" alt="LEGO Robots">
+    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/iot_arms_v1/arms_1.JPG" alt="LEGO Robots">
         <div class="card-body">
-          <h5 class="card-title">LEGO Robots</h5>
-          <p class="card-text">These robots were created as part of a Tufts course, and made out of LEGO. There are 4 robots shown here.</p>
-          <a href="project_pages/lego.html" class="btn btn-primary">See More</a>
+          <h5 class="card-title">DUM-E Arms (v1)</h5>
+          <p class="card-text">These IOT arms were created in 24 hours at MakeHarvard 2019, and will be used as a teaching tool for robotics.</p>
+          <a href="project_pages/iot_arms_v1.html" class="btn btn-primary">See More</a>
         </div>
-    </div> -->
+    </div>
   </div>
 
 
