--- a/projects.html
+++ b/projects.html
@@ -47,6 +47,32 @@
     This page does not include research. Click here for more information!
     <a href="research.html" class="btn btn-primary">See More</a>
   </div>
+  <div class="row">
+    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/lego/iot_arms_3.JPG" alt="LEGO Robots">
+        <div class="card-body">
+          <h5 class="card-title">LEGO Robots</h5>
+          <p class="card-text">These robots were created as part of a Tufts course, and made out of LEGO. There are 4 robots shown here.</p>
+          <a href="project_pages/lego.html" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/iot_arms_v1/arms_1.JPG" alt="IOT Arms">
+        <div class="card-body">
+          <h5 class="card-title">DUM-E Arms (v1)</h5>
+          <p class="card-text">These IOT arms were created in 24 hours at MakeHarvard 2019, and will be used as a teaching tool for robotics.</p>
+          <a href="project_pages/iot_arms_v1.html" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/qbot/bot_4.JPG" alt="QBot!">
+        <div class="card-body">
+          <h5 class="card-title">QBot!</h5>
+          <p class="card-text">This is an image recognition robot trained to react to QR codes. It was made for Tufts ME-84.</p>
+          <a href="project_pages/qbot.html" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+  </div>
 	<div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/trinity/IMG_4857.JPG" alt="Trinity Robot">
@@ -125,25 +151,6 @@
   			</div>
 		</div>
 	</div>
-  <div class="row">
-    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-        <img class="card-img-top" src="images/lego/iot_arms_3.JPG" alt="LEGO Robots">
-        <div class="card-body">
-          <h5 class="card-title">LEGO Robots</h5>
-          <p class="card-text">These robots were created as part of a Tufts course, and made out of LEGO. There are 4 robots shown here.</p>
-          <a href="project_pages/lego.html" class="btn btn-primary">See More</a>
-        </div>
-    </div>
-    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-        <img class="card-img-top" src="images/iot_arms_v1/arms_1.JPG" alt="LEGO Robots">
-        <div class="card-body">
-          <h5 class="card-title">DUM-E Arms (v1)</h5>
-          <p class="card-text">These IOT arms were created in 24 hours at MakeHarvard 2019, and will be used as a teaching tool for robotics.</p>
-          <a href="project_pages/iot_arms_v1.html" class="btn btn-primary">See More</a>
-        </div>
-    </div>
-  </div>
-
 
   <div class="alert alert-primary" role="alert">
     To see more projects, and any source code for projects, please visit my Github!
