--- a/index.html
+++ b/index.html
@@ -78,15 +78,26 @@
     			<a href="project_pages/couch_robot.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/mbta/mbta_screenshot_1.png" alt="MBTA Map">
-  			<div class="card-body">
-    			<h5 class="card-title">MBTA Map and Train schedule</h5>
-    			<p class="card-text">This was a project for Tufts Comp-20 in which the Google Maps API was used to map the MBTA redline and provide a live train schedule.</p>
-    			<a href="project_pages/mbta_map.html" class="btn btn-primary">See More</a>
-  			</div>
+			<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+	        <img class="card-img-top" src="images/iot_arms_v1/arms_1.JPG" alt="IOT Arms">
+	        <div class="card-body">
+		        <h5 class="card-title">DUM-E Arms (v1)</h5>
+		        <p class="card-text">These IOT arms were created in 24 hours at MakeHarvard 2019, and will be used as a teaching tool for robotics.</p>
+		        <a href="project_pages/iot_arms_v1.html" class="btn btn-primary">See More</a>
+	        </div>
+    	</div>
+    	<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+	        <img class="card-img-top" src="images/lego/iot_arms_3.JPG" alt="LEGO Robots">
+	        <div class="card-body">
+		        <h5 class="card-title">LEGO Robots</h5>
+		        <p class="card-text">These robots were created as part of a Tufts course, and made out of LEGO. There are 4 robots shown here.</p>
+		        <a href="project_pages/lego.html" class="btn btn-primary">See More</a>
+        	</div>
 		</div>
 	</div>
+	<div class="alert alert-primary" role="alert">
+    To see all projects, click here!
+    <a href="projects.html"><button type="button" class="btn btn-primary">Projects</button></a>
 </div>
 </div>
 
