Added uJumbo & AutoDrive

--- a/projects.html
+++ b/projects.html
@@ -99,6 +99,24 @@
   			</div>
 		</div>
 	</div>
+  <div class="row">
+    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/ujumbo/jumbo_1.JPG" alt="uJumbo">
+        <div class="card-body">
+          <h5 class="card-title">µJumbo</h5>
+          <p class="card-text">This robot was built to compete in the 2018-2019 Trinity International Firefighting competition.</p>
+          <a href="project_pages/ujumbo.html" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/autodrive/autodrive_2.JPG" alt="Quadcopter UAV">
+        <div class="card-body">
+          <h5 class="card-title">AutoDrive</h5>
+          <p class="card-text">This is an autonomous image processing robot made as part of Tufts ME-84 Robotics course.</p>
+          <a href="project_pages/autodrive.html" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+  </div>
 	<div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/longboard/image3.jpeg" alt="Electric Longboard">
