Added HobbesBot and Alarmed and Ready projects

--- a/projects.html
+++ b/projects.html
@@ -117,6 +117,24 @@
         </div>
     </div>
   </div>
+  <div class="row">
+    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/hobbes/hobbes_2.JPG" alt="uJumbo">
+        <div class="card-body">
+          <h5 class="card-title">HobbesBot</h5>
+          <p class="card-text">This robotic puppet with facial tracking was built as a final project for Tufts ME-84.</p>
+          <a href="project_pages/hobbes_bot.html" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/alarmed/alarmed_1.JPG" alt="Quadcopter UAV">
+        <div class="card-body">
+          <h5 class="card-title">Alarmed and Ready</h5>
+          <p class="card-text">This is a new take on alarm clocks for dorm rooms made as part of Tufts ME-1.</p>
+          <a href="project_pages/alarmed_and_ready.html" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+  </div>
 	<div class="row">
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/longboard/image3.jpeg" alt="Electric Longboard">
