--- a/projects.html
+++ b/projects.html
@@ -49,19 +49,19 @@
   </div>
   <div class="row">
     <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-        <img class="card-img-top" src="images/lego/iot_arms_3.JPG" alt="LEGO Robots">
-        <div class="card-body">
-          <h5 class="card-title">LEGO Robots</h5>
-          <p class="card-text">These robots were created as part of a Tufts course, and made out of LEGO. There are 4 robots shown here.</p>
-          <a href="project_pages/lego.html" class="btn btn-primary">See More</a>
-        </div>
-    </div>
-    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
         <img class="card-img-top" src="images/iot_arms_v1/arms_1.JPG" alt="IOT Arms">
         <div class="card-body">
           <h5 class="card-title">DUM-E Arms (v1)</h5>
           <p class="card-text">These IOT arms were created in 24 hours at MakeHarvard 2019, and will be used as a teaching tool for robotics.</p>
           <a href="project_pages/iot_arms_v1.html" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/fireeye/fireeye.png" alt="FireEye">
+        <div class="card-body">
+          <h5 class="card-title">FireEye</h5>
+          <p class="card-text">FireEye is an open source TCP/IP websocket library for streaming video and sending messages.</p>
+          <a href="project_pages/fireeye.html" class="btn btn-primary">See More</a>
         </div>
     </div>
     <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
@@ -74,14 +74,14 @@
     </div>
   </div>
 	<div class="row">
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/trinity/IMG_4857.JPG" alt="Trinity Robot">
-  			<div class="card-body">
-    			<h5 class="card-title">Firefighting Robot</h5>
-    			<p class="card-text">This robot was built to compete in the 2017/2018 Trinity International Firefighting competition.</p>
-    			<a href="project_pages/trinity_robot.html" class="btn btn-primary">See More</a>
-  			</div>
-		</div>
+    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/fleet/fleet1.png" alt="Fleet">
+        <div class="card-body">
+          <h5 class="card-title">Fleet</h5>
+          <p class="card-text">Fleet is an open source robot swarm intended for software development.</p>
+          <a href="project_pages/fleet.html" class="btn btn-primary">See More</a>
+        </div>
+    </div>
 		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/couch/image3.png" alt="Drivable Couch">
   			<div class="card-body">
@@ -90,15 +90,33 @@
     			<a href="project_pages/couch_robot.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/expo_digitizer/image1.jpeg" alt="Expo Digitizer">
-  			<div class="card-body">
-    			<h5 class="card-title">Expo Digitizer</h5>
-    			<p class="card-text">Made for Tufts Polyhack 2017, this Expo marker attachment generates PDF files from handwriting.</p>
-    			<a href="project_pages/expo_digitizer.html" class="btn btn-primary">See More</a>
-  			</div>
-		</div>
 	</div>
+  <div class="row">
+    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/trinity/IMG_4857.JPG" alt="Trinity Robot">
+        <div class="card-body">
+          <h5 class="card-title">Firefighting Robot</h5>
+          <p class="card-text">This robot was built to compete in the 2017/2018 Trinity International Firefighting competition.</p>
+          <a href="project_pages/trinity_robot.html" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/mle/mle.png" alt="MLE">
+        <div class="card-body">
+          <h5 class="card-title">MLE (My Little Eye)</h5>
+          <p class="card-text">MLE is an autonomous robot swarm designed to assist mobility and vision impaired users.</p>
+          <a href="project_pages/mle.html" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/expo_digitizer/image1.jpeg" alt="Expo Digitizer">
+        <div class="card-body">
+          <h5 class="card-title">Expo Digitizer</h5>
+          <p class="card-text">Made for Tufts Polyhack 2017, this Expo marker attachment generates PDF files from handwriting.</p>
+          <a href="project_pages/expo_digitizer.html" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+  </div>
   <div class="row">
     <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
         <img class="card-img-top" src="images/ujumbo/jumbo_1.JPG" alt="uJumbo">
@@ -132,6 +150,14 @@
           <h5 class="card-title">Alarmed and Ready</h5>
           <p class="card-text">This is a new take on alarm clocks for dorm rooms made as part of Tufts ME-1.</p>
           <a href="project_pages/alarmed_and_ready.html" class="btn btn-primary">See More</a>
+        </div>
+    </div>
+    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+        <img class="card-img-top" src="images/lego/iot_arms_3.JPG" alt="LEGO Robots">
+        <div class="card-body">
+          <h5 class="card-title">LEGO Robots</h5>
+          <p class="card-text">These robots were created as part of a Tufts course, and made out of LEGO. There are 4 robots shown here.</p>
+          <a href="project_pages/lego.html" class="btn btn-primary">See More</a>
         </div>
     </div>
   </div>
