Added pictures to MLE

--- a/project_pages/mle.html
+++ b/project_pages/mle.html
@@ -49,8 +49,19 @@
       			<img src="../images/mle/mle.png" class="img-fluid project-image" alt="Responsive image" width="50%">
     		</div>
   		</div>
+
+  		<div class="row">
+    		<div class="col">
+      			<img src="../images/mle/mle2.png" class="img-fluid project-image" alt="Responsive image">
+    		</div>
+  		</div>
   		<div class="row">
   			<p class="project-information">MLE (My Little Eye) is a hackathon project built to support the vision and mobility impaired. This project made use of a swarm of robots that respond to voice commands and autonomously search for objects in an unmapped environment. It was built at HackMIT 2019 over the course of 24 hours. For more documentation, visit the <a href="https://devpost.com/software/mle">Devpost page</a>.</p>
+  		</div>
+  		<div class="row">
+    		<div class="col">
+      			<img src="../images/mle/mle3.png" class="img-fluid project-image" alt="Responsive image">
+    		</div>
   		</div>
   	</div>
 </div>
