Began UI revamp

--- a/index.html
+++ b/index.html
@@ -38,67 +38,67 @@
 
 
 <!-- 	Section One -->
+<div id="particles-js"></div>
 <div class="container-fluid bg-1 text-center">
-	<img src="images/main_name.svg" class="img-fluid" style="padding-top: 2em;" width="750" alt="Jeremy Kanovsky">
-	</br></br></br>
-	<p class="name-sub-text">mechanical engineer // programmer</p>
-	</br></br>
-	<a href="JCK Resume.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg button-mid">Resume</button></a>
-	<a href="projects.html"><button type="button" class="btn btn-primary btn-lg button-mid">Projects</button></a>
-	</br></br></br>
+	<img src="images/main_name.svg" class="img-fluid" style="padding-top: 2em; padding-bottom: 6em;" width="750" alt="Jeremy Kanovsky">
+	<p class="name-sub-text" style="padding-bottom: 2em;">mechanical engineer // programmer</p>
+	<a href="JCK Resume.pdf" target="_blank"><button type="button" class="btn btn-outline-primary btn-lg button-mid">Resume</button></a>
+	<a href="projects.html"><button type="button" class="btn btn-outline-primary btn-lg button-mid">Projects</button></a>
 </div>
 
 
 <!-- About Me -->
-<div class="container-fluid w-75 bg-2 text-center">
-	<a name="about-me"></a>
-	<p class="section-header">// about me //</p>
-	<p class="about-me-info">Hello! I am Jeremy Kanovsky, an undergraduate student at Tufts University. I am studying Mechanical Engineering and Computer Science. At Tufts I am a member of the Engineering Student Council, the robotics team, the MAKE club, and the rocketry team. In my free time, I enjoy reading, attending hackathons, and spending time at the beach. This website was made by me with the intent to show some of my projects and to provide a consolidated platform for potential employers. Feel free to <a href="#contact-me">contact me</a> about anything!</p>
+<div class="container-fluid bg-2">
+	<div class="container-fluid w-75 text-center">
+		<a name="about-me"></a>
+		<p class="section-header">// about me //</p>
+		<p class="about-me-info">Hello! I am Jeremy Kanovsky, an undergraduate student at Tufts University. I am studying Mechanical Engineering and Computer Science. At Tufts I am a member of the Engineering Student Council, the robotics team, the MAKE club, and the rocketry team. In my free time, I enjoy reading, attending hackathons, and spending time at the beach. This website was made by me with the intent to show some of my projects and to provide a consolidated platform for potential employers. Feel free to <a href="#contact-me">contact me</a> about anything!</p>
+	</div>
 </div>
 
 <!-- Projects Showcase -->
-<div style="background-color: #ecf0f1">
-<div class="container-fluid w-75 bg-3 text-center">
-	<a name="projects-showcase"></a>
-	<p class="section-header">// projects showcase //</p>
-	<div class="row">
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/trinity/IMG_4857.JPG" alt="Trinity Robot">
-  			<div class="card-body">
-    			<h5 class="card-title">Firefighting Robot</h5>
-    			<p class="card-text">This robot was built to compete in the 2017/2018 Trinity International Firefighting competition.</p>
-    			<a href="project_pages/trinity_robot.html" class="btn btn-primary">See More</a>
-  			</div>
+<div class="bg-3">
+	<div class="container-fluid w-75 text-center">
+		<a name="projects-showcase"></a>
+		<p class="section-header">// projects showcase //</p>
+		<div class="row">
+			<div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
+	  			<img class="card-img-top" src="images/trinity/IMG_4857.JPG" alt="Trinity Robot">
+	  			<div class="card-body">
+	    			<h5 class="card-title">Firefighting Robot</h5>
+	    			<p class="card-text">This robot was built to compete in the 2017/2018 Trinity International Firefighting competition.</p>
+	    			<a href="project_pages/trinity_robot.html" class="btn btn-primary">See More</a>
+	  			</div>
+			</div>
+			<div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
+	  			<img class="card-img-top" src="images/couch/image3.png" alt="Drivable Couch">
+	  			<div class="card-body">
+	    			<h5 class="card-title">Drivable Couch</h5>
+	    			<p class="card-text">This drivable platform (pictured) is soon to be a drivable couch once suitable furniture can be found...</p>
+	    			<a href="project_pages/couch_robot.html" class="btn btn-primary">See More</a>
+	  			</div>
+			</div>
+			<div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
+		        <img class="card-img-top" src="images/iot_arms_v1/arms_1.JPG" alt="IOT Arms">
+		        <div class="card-body">
+			        <h5 class="card-title">DUM-E Arms (v1)</h5>
+			        <p class="card-text">These IOT arms were created in 24 hours at MakeHarvard 2019, and will be used as a teaching tool for robotics.</p>
+			        <a href="project_pages/iot_arms_v1.html" class="btn btn-primary">See More</a>
+		        </div>
+	    	</div>
+	    	<div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
+		        <img class="card-img-top" src="images/lego/iot_arms_3.JPG" alt="LEGO Robots">
+		        <div class="card-body">
+			        <h5 class="card-title">LEGO Robots</h5>
+			        <p class="card-text">These robots were created as part of a Tufts course, and made out of LEGO. There are 4 robots shown here.</p>
+			        <a href="project_pages/lego.html" class="btn btn-primary">See More</a>
+	        	</div>
+			</div>
 		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-  			<img class="card-img-top" src="images/couch/image3.png" alt="Drivable Couch">
-  			<div class="card-body">
-    			<h5 class="card-title">Drivable Couch</h5>
-    			<p class="card-text">This drivable platform (pictured) is soon to be a drivable couch once suitable furniture can be found...</p>
-    			<a href="project_pages/couch_robot.html" class="btn btn-primary">See More</a>
-  			</div>
-		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-	        <img class="card-img-top" src="images/iot_arms_v1/arms_1.JPG" alt="IOT Arms">
-	        <div class="card-body">
-		        <h5 class="card-title">DUM-E Arms (v1)</h5>
-		        <p class="card-text">These IOT arms were created in 24 hours at MakeHarvard 2019, and will be used as a teaching tool for robotics.</p>
-		        <a href="project_pages/iot_arms_v1.html" class="btn btn-primary">See More</a>
-	        </div>
-    	</div>
-    	<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
-	        <img class="card-img-top" src="images/lego/iot_arms_3.JPG" alt="LEGO Robots">
-	        <div class="card-body">
-		        <h5 class="card-title">LEGO Robots</h5>
-		        <p class="card-text">These robots were created as part of a Tufts course, and made out of LEGO. There are 4 robots shown here.</p>
-		        <a href="project_pages/lego.html" class="btn btn-primary">See More</a>
-        	</div>
-		</div>
+		<div class="alert alert-primary" role="alert">
+	    To see all projects, click here!
+	    <a href="projects.html"><button type="button" class="btn btn-primary">Projects</button></a>
 	</div>
-	<div class="alert alert-primary" role="alert">
-    To see all projects, click here!
-    <a href="projects.html"><button type="button" class="btn btn-primary">Projects</button></a>
-</div>
 </div>
 
 <!-- Contact Section -->
@@ -140,5 +140,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script src="js/particle.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
