--- a/index.html
+++ b/index.html
@@ -26,11 +26,16 @@
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav ml-auto">
 				<nav class="nav nav-pills nav-fill">
-					<a class="nav-item nav-link active pill-space" href="index.html">Home</a>
+					<a href="index.html"><button type="button" class="btn btn-outline-primary pill-space">Home</button></a>
+					<a href="index.html#contact-me"><button type="button" class="btn btn-outline-primary pill-space">Contact</button></a>
+					<a href="JCK Resume.pdf" target="_blank"><button type="button" class="btn btn-outline-primary pill-space">Resume</button></a>
+					<a href="research.html"><button type="button" class="btn btn-outline-primary pill-space">Research</button></a>
+					<a href="projects.html"><button type="button" class="btn btn-outline-primary pill-space">Projects</button></a>
+					<!-- <a class="nav-item nav-link active pill-space" href="index.html">Home</a>
 					<a class="nav-item nav-link active pill-space" href="index.html#contact-me">Contact</a>
 					<a class="nav-item nav-link active pill-space" href="JCK Resume.pdf" target="_blank">Resume</a>
 					<a class="nav-item nav-link active pill-space" href="research.html">Research</a>
-					<a class="nav-item nav-link active pill-space" href="projects.html">Projects</a>
+					<a class="nav-item nav-link active pill-space" href="projects.html">Projects</a> -->
 				</nav>
 			</div>
 		</div>
@@ -40,17 +45,18 @@
 <!-- 	Section One -->
 <div id="particles-js"></div>
 <div class="container-fluid bg-1 text-center">
-	<img src="images/main_name.svg" class="img-fluid" style="padding-top: 2em; padding-bottom: 6em;" width="750" alt="Jeremy Kanovsky">
+	<img src="images/main_name.svg" class="img-fluid" style="padding-top: 2em; padding-bottom: 16vh;" width="750" alt="Jeremy Kanovsky">
 	<p class="name-sub-text" style="padding-bottom: 2em;">mechanical engineer // programmer</p>
 	<a href="JCK Resume.pdf" target="_blank"><button type="button" class="btn btn-outline-primary btn-lg button-mid">Resume</button></a>
-	<a href="projects.html"><button type="button" class="btn btn-outline-primary btn-lg button-mid">Projects</button></a>
+	<a href="projects.html"><button type="button" class="btn btn-outline-primary btn-lg button-mid">Projects</button></a></br>
+	<a href="index.html#about-me"><img src="images/down_arrow.svg" class="img-fluid down-arrow"></a>
 </div>
 
 
 <!-- About Me -->
+<a name="about-me"></a>
 <div class="container-fluid bg-2">
 	<div class="container-fluid w-75 text-center">
-		<a name="about-me"></a>
 		<p class="section-header">// about me //</p>
 		<p class="about-me-info">Hello! I am Jeremy Kanovsky, an undergraduate student at Tufts University. I am studying Mechanical Engineering and Computer Science. At Tufts I am a member of the Engineering Student Council, the robotics team, the MAKE club, and the rocketry team. In my free time, I enjoy reading, attending hackathons, and spending time at the beach. This website was made by me with the intent to show some of my projects and to provide a consolidated platform for potential employers. Feel free to <a href="#contact-me">contact me</a> about anything!</p>
 	</div>
@@ -96,8 +102,9 @@
 			</div>
 		</div>
 		<div class="alert alert-primary" role="alert">
-	    To see all projects, click here!
-	    <a href="projects.html"><button type="button" class="btn btn-primary">Projects</button></a>
+	    To see all projects,
+	    <a href="projects.html"><button type="button" class="btn btn-outline-primary">click here</button></a>
+		</div>
 	</div>
 </div>
 
