--- a/projects.html
+++ b/projects.html
@@ -26,11 +26,11 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav ml-auto">
         <nav class="nav nav-pills nav-fill">
-          <a class="nav-item nav-link active pill-space" href="index.html">Home</a>
-          <a class="nav-item nav-link active pill-space" href="index.html#contact-me">Contact</a>
-          <a class="nav-item nav-link active pill-space" href="JCK Resume.pdf" target="_blank">Resume</a>
-          <a class="nav-item nav-link active pill-space" href="research.html">Research</a>
-          <a class="nav-item nav-link active pill-space" href="projects.html">Projects</a>
+          <a href="index.html"><button type="button" class="btn btn-outline-primary pill-space">Home</button></a>
+          <a href="index.html#contact-me"><button type="button" class="btn btn-outline-primary pill-space">Contact</button></a>
+          <a href="JCK Resume.pdf" target="_blank"><button type="button" class="btn btn-outline-primary pill-space">Resume</button></a>
+          <a href="research.html"><button type="button" class="btn btn-outline-primary pill-space">Research</button></a>
+          <a href="projects.html"><button type="button" class="btn btn-outline-primary pill-space">Projects</button></a>
         </nav>
       </div>
     </div>
@@ -40,15 +40,15 @@
 
 
 <!-- Projects Showcase -->
-<div class="sides">
+<div id="particles-js"></div>
 <div class="container-fluid w-75 bg-3 text-center projects-background">
 	<p class="section-header">// projects //</p>
   <div class="alert alert-primary" role="alert">
-    This page does not include research. Click here for more information!
-    <a href="research.html" class="btn btn-primary">See More</a>
+    To see more projects, please visit my Github!
+    <a href="https://github.com/0xJeremy" class="btn btn-primary"><i class="fa fa-github icon-padding" style="font-size: 30px;"></i></a>
   </div>
   <div class="row">
-    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+    <div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
         <img class="card-img-top" src="images/iot_arms_v1/arms_1.JPG" alt="IOT Arms">
         <div class="card-body">
           <h5 class="card-title">DUM-E Arms (v1)</h5>
@@ -56,7 +56,7 @@
           <a href="project_pages/iot_arms_v1.html" class="btn btn-primary">See More</a>
         </div>
     </div>
-    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+    <div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
         <img class="card-img-top" src="images/fireeye/fireeye.png" alt="FireEye">
         <div class="card-body">
           <h5 class="card-title">FireEye</h5>
@@ -64,7 +64,7 @@
           <a href="project_pages/fireeye.html" class="btn btn-primary">See More</a>
         </div>
     </div>
-    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+    <div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
         <img class="card-img-top" src="images/qbot/bot_4.JPG" alt="QBot!">
         <div class="card-body">
           <h5 class="card-title">QBot!</h5>
@@ -74,7 +74,7 @@
     </div>
   </div>
 	<div class="row">
-    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+    <div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
         <img class="card-img-top" src="images/fleet/fleet1.png" alt="Fleet">
         <div class="card-body">
           <h5 class="card-title">Fleet</h5>
@@ -82,7 +82,7 @@
           <a href="project_pages/fleet.html" class="btn btn-primary">See More</a>
         </div>
     </div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+		<div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/couch/image3.png" alt="Drivable Couch">
   			<div class="card-body">
     			<h5 class="card-title">Drivable Couch</h5>
@@ -92,7 +92,7 @@
 		</div>
 	</div>
   <div class="row">
-    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+    <div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
         <img class="card-img-top" src="images/trinity/IMG_4857.JPG" alt="Trinity Robot">
         <div class="card-body">
           <h5 class="card-title">Firefighting Robot</h5>
@@ -100,7 +100,7 @@
           <a href="project_pages/trinity_robot.html" class="btn btn-primary">See More</a>
         </div>
     </div>
-    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+    <div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
         <img class="card-img-top" src="images/mle/mle.png" alt="MLE">
         <div class="card-body">
           <h5 class="card-title">MLE (My Little Eye)</h5>
@@ -108,7 +108,7 @@
           <a href="project_pages/mle.html" class="btn btn-primary">See More</a>
         </div>
     </div>
-    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+    <div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
         <img class="card-img-top" src="images/expo_digitizer/image1.jpeg" alt="Expo Digitizer">
         <div class="card-body">
           <h5 class="card-title">Expo Digitizer</h5>
@@ -118,7 +118,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+    <div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
         <img class="card-img-top" src="images/ujumbo/jumbo_1.JPG" alt="uJumbo">
         <div class="card-body">
           <h5 class="card-title">µJumbo</h5>
@@ -126,7 +126,7 @@
           <a href="project_pages/ujumbo.html" class="btn btn-primary">See More</a>
         </div>
     </div>
-    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+    <div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
         <img class="card-img-top" src="images/autodrive/autodrive_2.JPG" alt="Quadcopter UAV">
         <div class="card-body">
           <h5 class="card-title">AutoDrive</h5>
@@ -136,7 +136,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+    <div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
         <img class="card-img-top" src="images/hobbes/hobbes_2.JPG" alt="uJumbo">
         <div class="card-body">
           <h5 class="card-title">HobbesBot</h5>
@@ -144,7 +144,7 @@
           <a href="project_pages/hobbes_bot.html" class="btn btn-primary">See More</a>
         </div>
     </div>
-    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+    <div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
         <img class="card-img-top" src="images/alarmed/alarmed_1.JPG" alt="Quadcopter UAV">
         <div class="card-body">
           <h5 class="card-title">Alarmed and Ready</h5>
@@ -152,7 +152,7 @@
           <a href="project_pages/alarmed_and_ready.html" class="btn btn-primary">See More</a>
         </div>
     </div>
-    <div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+    <div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
         <img class="card-img-top" src="images/lego/iot_arms_3.JPG" alt="LEGO Robots">
         <div class="card-body">
           <h5 class="card-title">LEGO Robots</h5>
@@ -162,7 +162,7 @@
     </div>
   </div>
 	<div class="row">
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+		<div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/longboard/image3.jpeg" alt="Electric Longboard">
   			<div class="card-body">
     			<h5 class="card-title">Electric Longboard</h5>
@@ -170,7 +170,7 @@
     			<a href="project_pages/longboard.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+		<div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/quadcopter/image1.jpeg" alt="Quadcopter UAV">
   			<div class="card-body">
     			<h5 class="card-title">Quadcopter UAV</h5>
@@ -178,7 +178,7 @@
     			<a href="project_pages/quadcopter.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+		<div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/vex_robot/image1.jpeg" alt="Electric Longboard">
   			<div class="card-body">
     			<h5 class="card-title">VEX Robot</h5>
@@ -188,7 +188,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+		<div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/js_animation/javascript_animation.png" alt="Javascript Animation">
   			<div class="card-body">
     			<h5 class="card-title">JavaScript Animation</h5>
@@ -196,7 +196,7 @@
     			<a href="project_pages/js_animation.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+		<div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/mbta/mbta_screenshot_1.png" alt="MBTA Map">
   			<div class="card-body">
     			<h5 class="card-title">MBTA Map and Train schedule</h5>
@@ -204,7 +204,7 @@
     			<a href="project_pages/mbta_map.html" class="btn btn-primary">See More</a>
   			</div>
 		</div>
-		<div class="card col-sm shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+		<div class="card col-sm shadow p-3 mb-5 bg-dark rounded" style="width: 18rem;">
   			<img class="card-img-top" src="images/gerp/gerp_code.png" alt="Gerp Code">
   			<div class="card-body">
     			<h5 class="card-title">"Gerp"</h5>
@@ -213,12 +213,10 @@
   			</div>
 		</div>
 	</div>
-
   <div class="alert alert-primary" role="alert">
-    To see more projects, and any source code for projects, please visit my Github!
-    <a href="https://github.com/0xJeremy" class="btn btn-primary"><i class="fa fa-github icon-padding" style="font-size: 30px;"></i></a>
+    This page does not include research. Click here for more information!
+    <a href="research.html" class="btn btn-primary">See More</a>
   </div>
-</div>
 </div>
 
 
@@ -246,5 +244,7 @@
 <script src="images/https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="images/https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="images/https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script src="js/particle.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
