--- a/project_pages/fireeye.html
+++ b/project_pages/fireeye.html
@@ -40,7 +40,7 @@
 
 
 <!-- Project Information -->
-<div class="sides">
+<div id="particles-js"></div>
 <div class="container-fluid w-75 bg-3 text-center projects-background">
 	<p class="section-header">// FireEye //</p>
 	<div class="container">
@@ -53,7 +53,6 @@
   			<p class="project-information">FireEye is a websocket wrapper to send arbitrary data over a TCP/IP port from Python to Node.js. It was written specifically to stream video from a Raspberry Pi to a remote web server, but can be applied to any system capable of running python and connecting to a network.<br> To read full documentation here is a link to the <a href="https://github.com/0xJeremy/FireEye">GitHub source</a>. This package is also hosted on <a href="https://pypi.org/project/FireEye/">PyPi</a> and on <a href="https://www.npmjs.com/package/fireeye">NPM (Node Package Manager)</a>.</p>
   		</div>
   	</div>
-</div>
 </div>
 
 
@@ -81,5 +80,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script src="../js/particle.js"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
