--- a/project_pages/iot_arms_v1.html
+++ b/project_pages/iot_arms_v1.html
@@ -40,7 +40,7 @@
 
 
 <!-- Project Information -->
-<div class="sides">
+<div id="particles-js"></div>
 <div class="container-fluid w-75 bg-3 text-center projects-background">
 	<p class="section-header">// DUM-E Arms (v1) //</p>
 	<div class="container">
@@ -70,7 +70,6 @@
     <a href="https://github.com/0xJeremy/Dum-E-IOT" class="btn btn-primary"><i class="fa fa-github icon-padding" style="font-size: 30px;"></i></a>
   </div>
 </div>
-</div>
 
 
 
@@ -97,5 +96,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script src="../js/particle.js"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
