--- a/project_pages/trinity_robot.html
+++ b/project_pages/trinity_robot.html
@@ -39,7 +39,7 @@
 
 
 <!-- Project Information -->
-<div class="sides">
+<div id="particles-js"></div>
 <div class="container-fluid w-75 bg-3 text-center projects-background">
 	<p class="section-header">// trinity robot //</p>
 	<div class="container">
@@ -58,7 +58,6 @@
   			<p class="project-information">This is a robot build with the Tufts Robotics club to be entered in the Trinity College International Firefighting Competition. The robot was designed to autonomously navigate a maze and extinguish a fire hidden in one of the rooms. This year our team won the Robotics Olympiad both in the group and solo categories.</p>
   		</div>
   	</div>
-</div>
 </div>
 
 
@@ -86,5 +85,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script src="../js/particle.js"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
