--- a/project_pages/gerp.html
+++ b/project_pages/gerp.html
@@ -40,7 +40,7 @@
 
 
 <!-- Project Information -->
-<div class="sides">
+<div id="particles-js"></div>
 <div class="container-fluid w-75 bg-3 text-center projects-background">
 	<p class="section-header">// gerp //</p>
 	<div class="container">
@@ -56,7 +56,6 @@
   			<p class="project-information">This project was made for Tufts Comp 15. "Gerp" is an imitation of the Unix/Linux "grep" command. The user enter's a query and gerp returns all instances of the query in a specified file path. The full source code can be viewed <a href="https://github.com/0xJeremy/Comp-15-Homework/tree/master/proj2">here</a>. The diagram above shows the interaction of the different classes and data structures used in this project in a simplified manner.</p>
   		</div>
   	</div>
-</div>
 </div>
 
 
@@ -84,5 +83,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script src="../js/particle.js"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
