--- a/project_pages/js_animation.html
+++ b/project_pages/js_animation.html
@@ -40,7 +40,7 @@
 
 
 <!-- Project Information -->
-<div class="sides">
+<div id="particles-js"></div>
 <div class="container-fluid w-75 bg-3 text-center projects-background">
 	<p class="section-header">// js animation //</p>
 	<div class="container">
@@ -54,7 +54,6 @@
   			<p class="project-information">This is an animation I made with JavaScript as practice with the language. The source code can be viewed <a href="https://github.com/0xJeremy/Javascript-Animations">here</a>. As a note: this animation will likely break on some screen resolutions. It is best viewed in a desktop browser.</p>
   		</div>
   	</div>
-</div>
 </div>
 
 
@@ -82,5 +81,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script src="../js/particle.js"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
