--- a/project_pages/longboard.html
+++ b/project_pages/longboard.html
@@ -40,7 +40,7 @@
 
 
 <!-- Project Information -->
-<div class="sides">
+<div id="particles-js"></div>
 <div class="container-fluid w-75 bg-3 text-center projects-background">
 	<p class="section-header">// electric longboard //</p>
 	<div class="container">
@@ -53,7 +53,6 @@
   			<p class="project-information">This was a project with Tufts MAKE club. We designed and build an electric skateboard. The end product was fully functional and ridable, but didn't fare well with bumpy terrain. Given a little more time to fabricate the enclosure for the electronics it would be a viable mode of transportation.</p>
   		</div>
   	</div>
-</div>
 </div>
 
 
@@ -81,5 +80,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script src="../js/particle.js"></script>
+<script src="../js/main.js"></script>
 </body>
 </html>
