--- a/project_pages/couch_robot.html
+++ b/project_pages/couch_robot.html
@@ -48,10 +48,12 @@
     		<div class="col">
     			<img src="../images/couch/image3.png" class="img-fluid project-image" alt="Couch Platform">
     		</div>
-    		<div class="col">
-    			<img src="../images/couch/image2.jpeg" class="img-fluid project-image" alt="Couch Platform">
-    		</div>
   		</div>
+      <div class="row">
+        <div class="col">
+          <img src="../images/couch/image2.jpeg" class="img-fluid project-image" alt="Couch Platform">
+        </div>
+      </div>
   		<div class="row">
   			<p class="project-information">This was a project with the Tufts Robotics club. We designed and built a remote controlled platform onto which will be mounted a couch. The drivable couch was built using FIRST Robotics hardware and programmed in C++. More pictures will be coming soon...</p>
   		</div>
