--- a/research.html
+++ b/research.html
@@ -53,7 +53,7 @@
   				<div class="card" style="background: transparent; border: 2px solid rgba(0,0,0,0.125) !important">
   					<img src="images/quadcopter_research/single_drone_control.png" class="img-fluid project-image" alt="Single drone control flow">
   					<div class="card-body">
-    					<p class="card-text" style="font-weight: bold">Control flow for flying a single quadrotor.</p>
+    					<p class="card-text" style="font-weight: bold; color: black;">Control flow for flying a single quadrotor.</p>
   					</div>
 				</div>
   			</div>
@@ -61,7 +61,7 @@
   				<div class="card" style="background: transparent; border: 2px solid rgba(0,0,0,0.125) !important">
   					<img src="images/quadcopter_research/multi_drone_control.png" class="img-fluid project-image" alt="Multi-drone control flow">
   					<div class="card-body">
-    					<p class="card-text" style="font-weight: bold">Control flow for flying multiple quadrotors.</p>
+    					<p class="card-text" style="font-weight: bold; color: black;">Control flow for flying multiple quadrotors.</p>
   					</div>
 				</div>
   			</div>
@@ -72,7 +72,7 @@
   				<div class="card" style="background: transparent; border: 2px solid rgba(0,0,0,0.125) !important">
   					<img src="images/quadcopter_research/multipoint_diagonal.png" class="img-fluid project-image" alt="Single drone control flow">
   					<div class="card-body">
-    					<p class="card-text" style="font-weight: bold">Logged path data for two point oscillation.</p>
+    					<p class="card-text" style="font-weight: bold; color: black;">Logged path data for two point oscillation.</p>
   					</div>
 				</div>
   			</div>
@@ -80,7 +80,7 @@
   				<div class="card" style="background: transparent; border: 2px solid rgba(0,0,0,0.125) !important">
   					<img src="images/quadcopter_research/multipoint_square.png" class="img-fluid project-image" alt="Multi-drone control flow">
   					<div class="card-body">
-    					<p class="card-text" style="font-weight: bold">Logged data for multipoint path flight.</p>
+    					<p class="card-text" style="font-weight: bold; color: black;">Logged data for multipoint path flight.</p>
   					</div>
 				</div>
   			</div>
