--- a/project_pages/trinity_robot.html
+++ b/project_pages/trinity_robot.html
@@ -45,15 +45,17 @@
 	<div class="container">
   		<div class="row">
     		<div class="col">
-      			<img src="../images/trinity/IMG_4799.JPG" class="img-fluid project-image" alt="Trinity Image">
-    		</div>
-    		<div class="col">
     			 <img src="../images/trinity/IMG_4857.JPG" class="img-fluid project-image" alt="Trinity Image">
     		</div>
-    		<div class="col">
-    			 <img src="../images/trinity/IMG_4916.JPG" class="img-fluid project-image" alt="Trinity Image">
-    		</div>
   		</div>
+      <div class="row">
+        <div class="col">
+            <img src="../images/trinity/IMG_4799.JPG" class="img-fluid project-image" alt="Trinity Image">
+        </div>
+        <div class="col">
+           <img src="../images/trinity/IMG_4916.JPG" class="img-fluid project-image" alt="Trinity Image">
+        </div>
+      </div>
   		<div class="row">
   			<p class="project-information">This is a robot build with the Tufts Robotics club to be entered in the Trinity College International Firefighting Competition. The robot was designed to autonomously navigate a maze and extinguish a fire hidden in one of the rooms. This year our team won the Robotics Olympiad both in the group and solo categories.</p>
   		</div>
