--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@
       <div class="navbar-nav ml-auto">
         <nav class="nav nav-pills nav-fill">
           <a href="index.html"><button type="button" class="btn btn-outline-primary pill-space">Home</button></a>
-          <a href="index.html#contact-me"><button type="button" class="btn btn-outline-primary pill-space">Contact</button></a>
+          <a href="../index.html#contact-me"><button type="button" class="btn btn-outline-primary pill-space">Contact</button></a>
           <a href="JCK Resume.pdf" target="_blank"><button type="button" class="btn btn-outline-primary pill-space">Resume</button></a>
           <a href="research.html"><button type="button" class="btn btn-outline-primary pill-space">Research</button></a>
           <a href="projects.html"><button type="button" class="btn btn-outline-primary pill-space">Projects</button></a>
@@ -110,9 +110,9 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="images/https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="images/https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="images/https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 <script src="js/particle.js"></script>
 <script src="js/main.js"></script>
 </body>
