--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 <!-- 	Section One -->
 <div id="particles-js"></div>
 <div class="container-fluid bg-1 text-center">
-	<img src="images/main_name.svg" class="img-fluid" style="padding-top: 2em; padding-bottom: 16vh;" width="750" alt="Jeremy Kanovsky">
-	<p class="name-sub-text" style="padding-bottom: 2em;">mechanical engineer // programmer</p>
+	<img src="images/main_name.svg" class="img-fluid name" width="750" alt="Jeremy Kanovsky">
+	<p class="name-sub-text subtext">mechanical engineer // programmer</p>
 	<a href="JCK Resume.pdf" target="_blank"><button type="button" class="btn btn-outline-primary btn-lg button-mid">Resume</button></a>
 	<a href="projects.html"><button type="button" class="btn btn-outline-primary btn-lg button-mid">Projects</button></a></br>
 	<a href="index.html#about-me"><img src="images/down_arrow.svg" class="img-fluid down-arrow"></a>
